# dichroicon

./: .gitignore  CMakeLists.txt  Makefile  README.md  rename.sh
config/: Config.hh.in  dichroicon.sh.in
macros/: vis_validation_geo.mac
ratdb/dichroicon/: Dichroicon.geo
src/: CMakeLists.txt  Dichroicon.cc  GeoHexDichroiconFactory.cc  dichroicon.cpp
src/include/: Dichroicon.hh  GeoHexDichroiconFactory.hh
